<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NoteÉtudiant</string>
    <string name="all_modules">Tous</string>
    <string name="favorites">⭐ Favoris</string>
    <string name="search_hint">Rechercher…</string>
    <string name="no_notes">Aucune note pour le moment</string>
    <string name="add_note">Ajouter une note</string>
    <string name="note_detail">Détail de la note</string>
    <string name="note_edit">Modifier la note</string>
    <string name="note_title">Titre</string>
    <string name="note_module">Module</string>
    <string name="note_content">Contenu</string>
    <string name="save">Enregistrer</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="favorite">Favori</string>
    <string name="add_favorite">Ajouter aux favoris</string>
    <string name="remove_favorite">Retirer des favoris</string>
    <string name="created_at">Créé le : %1$s</string>
    <string name="updated_at">Modifié le : %1$s</string>
    <string name="error_title_required">Le titre est obligatoire</string>
    <string name="error_module_required">Le module est obligatoire</string>
</resources>
