<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/noteListFragment">

    <fragment
        android:id="@+id/noteListFragment"
        android:name="com.example.android_projet.ui.notelist.NoteListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_note_list">

        <action
            android:id="@+id/actionNoteListToNoteDetail"
            app:destination="@id/noteDetailFragment"/>

        <action
            android:id="@+id/actionNoteListToNoteEdit"
            app:destination="@id/noteEditFragment"/>

    </fragment>

    <fragment
        android:id="@+id/noteDetailFragment"
        android:name="com.example.android_projet.ui.notedetail.NoteDetailFragment"
        android:label="@string/note_detail"
        tools:layout="@layout/fragment_note_detail">

        <action
            android:id="@+id/actionNoteDetailToNoteEdit"
            app:destination="@id/noteEditFragment"/>

    </fragment>

    <fragment
        android:id="@+id/noteEditFragment"
        android:name="com.example.android_projet.ui.noteedit.NoteEditFragment"
        android:label="@string/note_edit"
        tools:layout="@layout/fragment_note_edit"/>


</navigation>
